src/test/resources/regressions/features/sets/set-literal-fail7.gobra
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

package pkg

func foo() {
  // error: set literals cannot have keys
  //:: ExpectedOutput(type_error)
  ghost s := set[bool] { 0 : false }
}
